# CIR_monasse

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  case.cpp  case.cpp.autosave  case.h  case.h.autosave  convention.md  graphics.cpp  graphics.h  joueur.cpp  joueur.h  main.cpp  my_cheatsheet.md  piece.cpp  piece.h  piece.h.autosave  plateau.cpp  plateau.cpp.autosave  plateau.h  plateau.h.autosave
test_cavalier/: graphics.h
